<resources>
    <string name="app_name">VeroLimp</string>
    <string name="hint_pass">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="registerForm">New User</string>
    <string name="hint_name">Name</string>
    <string name="hint_address">Address</string>
    <string name="hint_mail">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="btRegister">Sign up</string>
</resources>
