<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deepBlue"
    tools:context="com.yotampocoloentendia.verolimp.view.activities.RegisterActivity">

    <TextView
        android:id="@+id/tvNewUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registerForm"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="10dp"
        android:gravity="center"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvNewUser"
        android:layout_centerHorizontal="true"
        android:textColorHint="@color/white"
        android:theme="@style/inputText"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/input_layout_name"
            android:layout_alignStart="@+id/input_layout_name"
            android:layout_below="@+id/input_layout_name"
            android:hint="@string/hint_name"
            android:textColor="@color/white"
            android:layout_alignRight="@+id/input_layout_name"
            android:layout_alignEnd="@+id/input_layout_name" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_layout_name"
        android:layout_centerHorizontal="true"
        android:textColorHint="@color/white"
        android:theme="@style/inputText"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/input_layout_email"
            android:layout_alignStart="@+id/input_layout_email"
            android:layout_below="@+id/input_layout_email"
            android:hint="@string/hint_mail"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:layout_alignRight="@+id/input_layout_email"
            android:layout_alignEnd="@+id/input_layout_email" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_layout_email"
        android:layout_centerHorizontal="true"
        android:textColorHint="@color/white"
        android:theme="@style/inputText"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/input_layout_password"
            android:layout_alignStart="@+id/input_layout_password"
            android:layout_below="@+id/input_layout_password"
            android:hint="@string/hint_pass"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:layout_alignRight="@+id/input_layout_password"
            android:layout_alignEnd="@+id/input_layout_password" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_address"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_layout_password"
        android:layout_centerHorizontal="true"
        android:textColorHint="@color/white"
        android:theme="@style/inputText"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/input_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/input_layout_address"
            android:layout_alignStart="@+id/input_layout_address"
            android:layout_below="@+id/input_layout_address"
            android:hint="@string/hint_address"
            android:inputType="text"
            android:textColor="@color/white"
            android:layout_alignRight="@+id/input_layout_address"
            android:layout_alignEnd="@+id/input_layout_address" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_phone"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_layout_address"
        android:layout_centerHorizontal="true"
        android:textColorHint="@color/white"
        android:theme="@style/inputText"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/input_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/input_layout_phone"
            android:layout_alignStart="@+id/input_layout_phone"
            android:layout_below="@+id/input_layout_phone"
            android:hint="@string/hint_phone"
            android:inputType="number"
            android:textColor="@color/white"
            android:layout_alignRight="@+id/input_layout_phone"
            android:layout_alignEnd="@+id/input_layout_phone" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/input_layout_phone"
        android:layout_alignRight="@id/input_layout_phone"
        android:layout_below="@+id/input_layout_phone"
        android:layout_marginTop="10dp"
        android:text="@string/btRegister"/>

</RelativeLayout>
