<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deepBlue"
    android:layout_centerVertical="true"
    tools:context="com.yotampocoloentendia.verolimp.view.activities.LoginActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_user"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColorHint="@color/white"
        android:theme="@style/inputText"
        android:layout_marginTop="100dp">

        <EditText
            android:id="@+id/input_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:hint="@string/hint_user"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_pass"
        android:layout_width="300dp"
        android:layout_below="@+id/input_layout_user"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColorHint="@color/white"
        android:theme="@style/inputText"
        android:layout_marginTop="50dp">

        <EditText
            android:id="@+id/input_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/input_layout_user"
            android:layout_alignStart="@+id/input_layout_user"
            android:layout_below="@+id/input_layout_user"
            android:hint="@string/hint_pass"
            android:textColor="@color/white"
            android:inputType="textPassword"
            android:layout_alignRight="@+id/input_layout_user"
            android:layout_alignEnd="@+id/input_layout_user" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:layout_below="@id/input_layout_pass"
        android:layout_alignLeft="@id/input_layout_pass"
        android:layout_alignRight="@id/input_layout_pass"
        android:layout_marginTop="40dp"
        android:onClick="onViewClicked"
        android:background="@color/white"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:linksClickable="true"
        android:layout_below="@+id/btLogin"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:onClick="onViewClicked"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/register"/>

</RelativeLayout>
